@@ -4,10 +4,8 @@ import static java.lang.Boolean.parseBoolean;
 import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.DOB_AS_DATE_FIELD_NAME;
 import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getFirstValue;
 import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.getGroup;
-import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Field.IS_GOING_TO_SCHOOL;
-import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Group.HOUSEHOLD;
-
 import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Field.IS_PREGNANT;
+import static org.codeforamerica.shiba.application.parsers.ApplicationDataParser.Group.HOUSEHOLD;
 
 import java.time.LocalDate;
 import java.time.Period;
@@ -15,7 +13,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.codeforamerica.shiba.application.Application;
 import org.codeforamerica.shiba.pages.data.ApplicationData;
 import org.codeforamerica.shiba.pages.data.Iteration;
 import org.codeforamerica.shiba.pages.data.PageData;
@@ -26,39 +23,37 @@ import org.springframework.stereotype.Service;
 
 @Service
 public class WicRecommendationService {
-	
+
 	public static final int CHILD_AGE_MAXIMUM = 5;
 	private final DateOfBirthEnrichment dateOfBirthEnrichment = new HouseholdMemberDateOfBirthEnrichment();
 
-	
 	public boolean showWicMessage(ApplicationData applicationData) {
-		//ApplicationData applicationData = application.getApplicationData();
 		return hasPregnantHouseholdMember(applicationData) || hasHouseholdMemberUpToAge5(applicationData);
 	}
-	
+
 	public boolean hasPregnantHouseholdMember(ApplicationData applicationData) {
 		PagesData pagesData = applicationData.getPagesData();
 		return parseBoolean(getFirstValue(pagesData, IS_PREGNANT));
 	}
-	
-	  public boolean hasHouseholdMemberUpToAge5(ApplicationData applicationData) {
-		    List<PagesData> householdMemberIterations = getGroup(applicationData, HOUSEHOLD)
-		        .stream().map(Iteration::getPagesData).toList();
-		    List<PageData> householdMemberIterationEnrichedDobPagesData = householdMemberIterations.stream()
-		        .map(dateOfBirthEnrichment::process).toList();
-		    List<String> householdMemberBirthDatesAsStrings = householdMemberIterationEnrichedDobPagesData
-		        .stream().map(pagesData -> pagesData.get(DOB_AS_DATE_FIELD_NAME).getValue().get(0))
-		        .toList();
-		    List<LocalDate> householdMemberBirthDatesAsLocalDates =
-		        getHouseHoldMemberDatesOfBirthAsDates(householdMemberBirthDatesAsStrings);
-		    return householdMemberBirthDatesAsLocalDates.stream()
-		        .anyMatch(date -> Period.between(date, LocalDate.now()).getYears() <= CHILD_AGE_MAXIMUM);
-		  }
-	  
-	  private List<LocalDate> getHouseHoldMemberDatesOfBirthAsDates(List<String> birthDatesAsStrings) {
-		    return birthDatesAsStrings.stream().filter(s -> !s.isBlank())
-		        .map(stringDob -> LocalDate.parse(stringDob, DateTimeFormatter.ofPattern("MM/dd/yyyy")))
-		        .collect(Collectors.toList());
-		  }
+
+	public boolean hasHouseholdMemberUpToAge5(ApplicationData applicationData) {
+		//TODO emj fix this when there are no HH groups.  If no HH group, then return false.
+		List<PagesData> householdMemberIterations = getGroup(applicationData, HOUSEHOLD).stream()
+				.map(Iteration::getPagesData).toList();
+		List<PageData> householdMemberIterationEnrichedDobPagesData = householdMemberIterations.stream()
+				.map(dateOfBirthEnrichment::process).toList();
+		List<String> householdMemberBirthDatesAsStrings = householdMemberIterationEnrichedDobPagesData.stream()
+				.map(pagesData -> pagesData.get(DOB_AS_DATE_FIELD_NAME).getValue().get(0)).toList();
+		List<LocalDate> householdMemberBirthDatesAsLocalDates = getHouseHoldMemberDatesOfBirthAsDates(
+				householdMemberBirthDatesAsStrings);
+		return householdMemberBirthDatesAsLocalDates.stream()
+				.anyMatch(date -> Period.between(date, LocalDate.now()).getYears() < CHILD_AGE_MAXIMUM);
+	}
+
+	private List<LocalDate> getHouseHoldMemberDatesOfBirthAsDates(List<String> birthDatesAsStrings) {
+		return birthDatesAsStrings.stream().filter(s -> !s.isBlank())
+				.map(stringDob -> LocalDate.parse(stringDob, DateTimeFormatter.ofPattern("MM/dd/yyyy")))
+				.collect(Collectors.toList());
+	}
 
 }
